@@ -28,6 +28,8 @@ bzr-svn 0.4.10  UNRELEASED
 
     * Avoid sometimes incorrect determination of Bazaar revision numbers. (#181773)
 
+	* Deal with bzr:svn-revision-info property being removed. (#206728)
+
 bzr-svn 0.4.9	2008-03-23
 
   FEATURES
